--- a/configs/geo_profile.yaml
+++ b/configs/geo_profile.yaml
@@ -25,6 +25,41 @@ countries:
     FI: "Finland"
     IE: "Ireland"
     CH: "Switzerland"
+    AZ: "Azerbaijan"
+    MY: "Malaysia"
+    MT: "Malta"
+    SI: "Slovenia"
+    DO: "Dominican Republic"
+    PH: "Philippines"
+    PK: "Pakistan"
+    IL: "Israel"
+    SA: "Saudi Arabia"
+    AE: "United Arab Emirates"
+    AR: "Argentina"
+    CL: "Chile"
+    CO: "Colombia"
+    PE: "Peru"
+    VE: "Venezuela"
+    EG: "Egypt"
+    ZA: "South Africa"
+    KR: "South Korea"
+    TR: "Turkey"
+    UA: "Ukraine"
+    RO: "Romania"
+    HU: "Hungary"
+    CZ: "Czechia"
+    SK: "Slovakia"
+    GR: "Greece"
+    BG: "Bulgaria"
+    LT: "Lithuania"
+    LV: "Latvia"
+    EE: "Estonia"
+    TH: "Thailand"
+    ID: "Indonesia"
+    BD: "Bangladesh"
+    SG: "Singapore"
+    HK: "Hong Kong"
+    NZ: "New Zealand"
 
   aliases:
     # United States
